Doing the ENV commands differently.

--- a/ros/indigo/perception/Dockerfile
+++ b/ros/indigo/perception/Dockerfile
@@ -25,7 +25,7 @@ RUN apt-get update -qq && apt-get install -y -q \
 RUN update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-5 1 --slave /usr/bin/g++ g++ /usr/bin/g++-5
 
 # Set up environment for libas-common
-RUN export CPATH="/usr/local/include/external:${CPATH}"
+ENV CPATH "/usr/local/include/external:${CPATH}"
 
 # Add AS rosdep rules
 RUN echo "yaml https://s3.amazonaws.com/autonomoustuff-repo/autonomoustuff-public-$ROS_DISTRO.yaml $ROS_DISTRO" > /etc/ros/rosdep/sources.list.d/40-autonomoustuff-public-'$ROS_DISTRO'.list
