--- a/ros2/bouncy/ros-core/Dockerfile
+++ b/ros2/bouncy/ros-core/Dockerfile
@@ -4,7 +4,7 @@ RUN apt update -qq && apt install -y -q \
     build-essential \
     cmake \
     apt-transport-https \
-    python-rosdep \
+    python3-rosdep \
     python3-colcon-common-extensions \
     python3-pip \
     && rm -rf /var/lib/apt/lists/*
