Autoware: Adding additional prereqs.

--- a/ros/kinetic/autoware-ci/Dockerfile
+++ b/ros/kinetic/autoware-ci/Dockerfile
@@ -39,40 +39,57 @@ RUN apt update -qq && apt install -y -q \
     python-rospkg \
     python-serial \
     python-yaml \
+    python3-colcon-common-extensions \
     python3-pip \
     python3-setuptools \
     qtbase5-dev \
+    ros-kinetic-automotive-navigation-msgs \
+    ros-kinetic-automotive-platform-msgs \
     ros-kinetic-camera-info-manager \
     ros-kinetic-catkin \
     ros-kinetic-cmake-modules \
     ros-kinetic-cv-bridge \
+    ros-kinetic-diagnostic-aggregator \
     ros-kinetic-diagnostic-msgs \
     ros-kinetic-diagnostic-updater \
     ros-kinetic-dynamic-reconfigure \
+    ros-kinetic-effort-controllers \
+    ros-kinetic-gazebo-ros-control \
     ros-kinetic-geometry-msgs \
+    ros-kinetic-gps-common \
     ros-kinetic-grid-map-msgs \
     ros-kinetic-grid-map-ros \
     ros-kinetic-grid-map-visualization \
     ros-kinetic-gscam \
     ros-kinetic-image-geometry \
     ros-kinetic-image-transport \
+    ros-kinetic-image-view2 \
+    ros-kinetic-imu-filter-madgwick \
+    ros-kinetic-imu-tools \
+    ros-kinetic-joint-state-controller \
     ros-kinetic-jsk-recognition-msgs \
     ros-kinetic-jsk-rviz-plugins \
     ros-kinetic-message-generation \
     ros-kinetic-message-runtime \
     ros-kinetic-nav-msgs \
+    ros-kinetic-nmea-msgs \
     ros-kinetic-nodelet \
     ros-kinetic-pacmod-msgs \
     ros-kinetic-pcl-conversions \
     ros-kinetic-pcl-ros \
+    ros-kinetic-position-controllers \
     ros-kinetic-python-qt-binding \
     ros-kinetic-robot-state-publisher \
+    ros-kinetic-rosbridge-server \
     ros-kinetic-roscpp \
     ros-kinetic-rosgraph-msgs \
     ros-kinetic-roslib \
+    ros-kinetic-roslint \
     ros-kinetic-rospy \
     ros-kinetic-rostest \
     ros-kinetic-rosunit \
+    ros-kinetic-rqt-gui \
+    ros-kinetic-rqt-plot \
     ros-kinetic-rviz \
     ros-kinetic-sensor-msgs \
     ros-kinetic-sound-play \
@@ -80,6 +97,8 @@ RUN apt update -qq && apt install -y -q \
     ros-kinetic-tf \
     ros-kinetic-tf2 \
     ros-kinetic-tf2-geometry-msgs \
+    ros-kinetic-transmission-interface \
+    ros-kinetic-velocity-controllers \
     ros-kinetic-velodyne \
     ros-kinetic-velodyne-description \
     ros-kinetic-velodyne-gazebo-plugins \
