Finishing touches on noetic images

--- a/ros/noetic/perception/Dockerfile
+++ b/ros/noetic/perception/Dockerfile
@@ -5,7 +5,7 @@ RUN apt-get update -qq && apt-get install -y -q \
     build-essential \
     cmake \
     apt-transport-https \
-    python-catkin-tools \
+    python3-catkin-tools \
     openssh-client \
     && rm -rf /var/lib/apt/lists/*
 
