Add tzdata and keyboard-configuration to ubuntu images to avoid future prompts

--- a/ubuntu/xenial-non-root/Dockerfile
+++ b/ubuntu/xenial-non-root/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:16.04
 
-RUN apt-get update && apt-get install -y sudo
+RUN apt-get update && apt-get install -y sudo tzdata keyboard-configuration
 
 RUN adduser --disabled-password --gecos '' as-user
 RUN adduser as-user sudo
